<resources>
    <string name="app_name" translatable="false">LiveNet</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications" translatable="false">Notifications</string>
    <string name="username" translatable="false">Username</string>
    <string name="password">Password</string>
    <string name="register_here">Register Here.</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="email" translatable="false">Email</string>
    <string name="registrarse">Registrarse</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="repite_la_contrase_a">Repite la contraseña</string>
    <string name="volver">Volver</string>
    <string name="entrar">Entrar</string>
    <string name="chat" translatable="false">Chat</string>
    <string name="perfil">Perfil</string>
    <string name="mapa">Mapa</string>
    <string name="loading">Imagen de carga</string>
    <string name="registrando">Registrando...</string>
    <string name="logeando">Conectandose...</string>
    <string name="mensajes">Mensajes</string>
    <string name="amigos">Amigos</string>
    <string name="sender_msg">Tú</string>
    <string name="recuperandosesion">Recuperando Sesion...</string>
    <string name="visto">Visto</string>
    <string name="enviado">Enviado</string>
</resources>
