<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context="com.example.livenet.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivLoginLogo"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/logo" />

            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/tilUsuarioLogin"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:baselineAligned="false"
                android:hint="@string/usuario"
                android:textColorHint="@color/colorAzulClaro"
                app:boxCornerRadiusBottomEnd="25dp"
                app:boxCornerRadiusBottomStart="25dp"
                app:boxCornerRadiusTopEnd="25dp"
                app:boxCornerRadiusTopStart="25dp"
                app:boxStrokeColor="@color/colorAzulClaro">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etUsuarioLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="25dp"
                    android:paddingEnd="25dp"
                    android:singleLine="true"
                    android:textColor="@color/colorAzulClaro"
                    android:textSize="20sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPassLogin"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:hint="@string/contrase_a"
                android:textColorHint="@color/colorAzulClaro"
                app:boxCornerRadiusBottomEnd="25dp"
                app:boxCornerRadiusBottomStart="25dp"
                app:boxCornerRadiusTopEnd="25dp"
                app:boxCornerRadiusTopStart="25dp"
                app:boxStrokeColor="@color/colorAzulClaro">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:paddingStart="25dp"
                    android:paddingEnd="25dp"
                    android:singleLine="true"
                    android:textColor="@color/colorAzulClaro"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_viewLoginEntrar"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="0.5"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:cardBackgroundColor="@color/colorAzulClaro"
                    card_view:cardCornerRadius="25dp"
                    card_view:cardElevation="10dp"
                    card_view:cardUseCompatPadding="false">

                    <TextView
                        android:id="@+id/tvEntrarLogin"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:fontFamily="monospace"
                        android:paddingStart="30dp"
                        android:paddingTop="11dp"
                        android:paddingEnd="30dp"
                        android:paddingBottom="5dp"
                        android:text="@string/entrar"
                        android:textAlignment="center"
                        android:textColor="@color/colorTexto"
                        android:textSize="20sp" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_viewLoginRegistrar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:cardBackgroundColor="@color/colorAzulTraslucido"
                    card_view:cardCornerRadius="25dp"
                    card_view:cardElevation="10dp"
                    card_view:cardUseCompatPadding="false">

                    <TextView
                        android:id="@+id/tvRegistrarLogin"
                        android:layout_width="300dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:fontFamily="monospace"
                        android:paddingStart="30dp"
                        android:paddingTop="10dp"
                        android:paddingEnd="30dp"
                        android:paddingBottom="5dp"
                        android:text="@string/registrarse"
                        android:textAlignment="center"
                        android:textColor="@color/colorTexto"
                        android:textSize="20sp" />
                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/layoutLoadingLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#D20F0F0F"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:visibility="invisible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivLoadingLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/loading"
                android:foregroundGravity="center"
                android:src="@drawable/loading" />

            <TextView
                android:id="@+id/tvLogeando"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/logeando"
                android:textColor="#FFFFFF"
                android:textSize="30dp" />
        </LinearLayout>

    </RelativeLayout>

</FrameLayout>

