<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/gradient"
    android:id="@+id/Registro"
    tools:context=".FragmentRegistro">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivRegistroLogo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/logo" />

        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/tilUsuarioRegistro"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:baselineAligned="false"
            android:hint="@string/usuario"
            android:textColorHint="@color/colorAzulClaro"
            app:boxCornerRadiusBottomEnd="25dp"
            app:boxCornerRadiusBottomStart="25dp"
            app:boxCornerRadiusTopEnd="25dp"
            app:boxCornerRadiusTopStart="25dp"
            app:boxStrokeColor="@color/colorAzulClaro">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUsuarioRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                android:singleLine="true"
                android:textColor="@color/colorAzulClaro"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassRegistro"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/contrase_a"
            android:textColorHint="@color/colorAzulClaro"
            app:boxCornerRadiusBottomEnd="25dp"
            app:boxCornerRadiusBottomStart="25dp"
            app:boxCornerRadiusTopEnd="25dp"
            app:boxCornerRadiusTopStart="25dp"
            app:boxStrokeColor="@color/colorAzulClaro">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                android:singleLine="true"
                android:textColor="@color/colorAzulClaro"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilRepPassRegistro"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/repite_la_contrase_a"
            android:textColorHint="@color/colorAzulClaro"
            app:boxCornerRadiusBottomEnd="25dp"
            app:boxCornerRadiusBottomStart="25dp"
            app:boxCornerRadiusTopEnd="25dp"
            app:boxCornerRadiusTopStart="25dp"
            app:boxStrokeColor="@color/colorAzulClaro">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etRepPassRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                android:singleLine="true"
                android:textColor="@color/colorAzulClaro"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/tilEmailRegistro"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:baselineAligned="false"
            android:hint="@string/email"
            android:textColorHint="@color/colorAzulClaro"
            card_view:boxCornerRadiusBottomEnd="25dp"
            card_view:boxCornerRadiusBottomStart="25dp"
            card_view:boxCornerRadiusTopEnd="25dp"
            card_view:boxCornerRadiusTopStart="25dp"
            card_view:boxStrokeColor="@color/colorAzulClaro">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmailRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                android:singleLine="true"
                android:textColor="@color/colorAzulClaro"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_viewRegistrarRegistro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@color/colorAzulClaro"
            card_view:cardCornerRadius="25dp"
            card_view:cardElevation="10dp"
            card_view:cardUseCompatPadding="false">

            <TextView
                android:id="@+id/tvRegistrarLogin2"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:fontFamily="monospace"
                android:paddingStart="30dp"
                android:paddingTop="10dp"
                android:paddingEnd="30dp"
                android:paddingBottom="5dp"
                android:text="@string/registrarse"
                android:textAlignment="center"
                android:textColor="@color/colorTexto"
                android:textSize="20sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_viewRegistroVolver"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@color/colorAzulTraslucido"
            card_view:cardCornerRadius="25dp"
            card_view:cardElevation="10dp"
            card_view:cardUseCompatPadding="false">

            <TextView
                android:id="@+id/tvRegistroVolver"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:fontFamily="monospace"
                android:paddingStart="30dp"
                android:paddingTop="11dp"
                android:paddingEnd="30dp"
                android:paddingBottom="5dp"
                android:text="@string/volver"
                android:textAlignment="center"
                android:textColor="@color/colorTexto"
                android:textSize="20sp" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>


</ScrollView>

