<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/gradient"
    android:id="@+id/Login"
    tools:context=".FragmentLogin">


<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivLoginLogo"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/logo" />

        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/tilUsuarioLogin"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:baselineAligned="false"
            android:hint="@string/usuario"
            android:textColorHint="@color/colorAzulClaro"
            app:boxCornerRadiusBottomEnd="25dp"
            app:boxCornerRadiusBottomStart="25dp"
            app:boxCornerRadiusTopEnd="25dp"
            app:boxCornerRadiusTopStart="25dp"
            app:boxStrokeColor="@color/colorAzulClaro">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUsuarioLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                android:textColor="@color/colorAzulClaro"
                android:textSize="22sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassLogin"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/contrase_a"
            android:textColorHint="@color/colorAzulClaro"
            app:boxCornerRadiusBottomEnd="25dp"
            app:boxCornerRadiusBottomStart="25dp"
            app:boxCornerRadiusTopEnd="25dp"
            app:boxCornerRadiusTopStart="25dp"
            app:boxStrokeColor="@color/colorAzulClaro">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:singleLine="true"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                android:textColor="@color/colorAzulClaro"
                android:textSize="22sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_viewLoginRegistrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/colorAzulTraslucido"
                card_view:cardCornerRadius="25dp"
                card_view:cardElevation="10dp"
                card_view:cardUseCompatPadding="false">

                <TextView
                    android:id="@+id/tvRegistrarLogin"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:fontFamily="monospace"
                    android:paddingStart="30dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="30dp"
                    android:paddingBottom="5dp"
                    android:text="Registrarse"
                    android:textAlignment="center"
                    android:textColor="@color/colorTexto"
                    android:textSize="22sp" />
            </androidx.cardview.widget.CardView>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_viewLoginEntrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="0.5"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/colorAzulClaro"
                card_view:cardCornerRadius="25dp"
                card_view:cardElevation="10dp"
                card_view:cardUseCompatPadding="false">

                <TextView
                    android:id="@+id/tvEntrarLogin"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:fontFamily="monospace"
                    android:paddingStart="30dp"
                    android:paddingTop="7dp"
                    android:paddingEnd="30dp"
                    android:paddingBottom="7dp"
                    android:text="Entrar"
                    android:textAlignment="center"
                    android:textColor="@color/colorTexto"
                    android:textSize="22sp" />
            </androidx.cardview.widget.CardView>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

    </LinearLayout>


</ScrollView>

